<resources>
    <string name="app_name">Rome City Guide</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_guides">Guides</string>
    <string name="title_events">Events</string>
    <string name="title_places">Places</string>
    <string name="title_accommodations">Accommodations</string>
    <string name="btn_show_on_map">SHOW ON MAP</string>
    <string name="tv_description_label">Description</string>
    <string name="b_write_review">Write a review</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="til_review_hint">Review Description</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="review_submission">Thank you for your review submission!</string>
    <string name="review_choose_rating">Please, choose rating value</string>
    <string name="tv_places_label">Places</string>
    <string name="btn_show_tour">SHOW TOUR</string>
</resources>