<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_guides">

    <fragment
        android:id="@+id/navigation_guides"
        android:name="pl.edu.pwr.lab4.i242487.view.fragment.TourGuidesFragment"
        android:label="@string/title_guides"
        tools:layout="@layout/fragment_tour_guides" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="pl.edu.pwr.lab4.i242487.view.fragment.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_places"
        android:name="pl.edu.pwr.lab4.i242487.view.fragment.PlacesFragment"
        android:label="@string/title_places"
        tools:layout="@layout/fragment_places" />

    <fragment
        android:id="@+id/navigation_accommodation"
        android:name="pl.edu.pwr.lab4.i242487.view.fragment.AccommodationsFragment"
        android:label="@string/title_accommodations"
        tools:layout="@layout/fragment_places" />
</navigation>